adds color, 3 col layout

--- a/index.html
+++ b/index.html
@@ -16,27 +16,37 @@ to our site should be able to buy cinnamon rolls by different flavors:</p>
 
 <div id="bun_list" class="boxGreen">
     <br>
-    <ul>Maple Apple</ul>
-    <ul>Pecan</ul>
-    <ul>Bacon Walnut Original (Gluten-free)</ul>
-    <ul>Original (Vegan)</ul>
-    <ul>Original Pumpkin</ul>
-    <ul>Spice</ul>
-    <ul>Caramel</ul>
-    <ul>Pecan</ul>
-    <ul>Carrot Cake Old Fashioned</ul>
-    <ul>Buttermilk</ul>
-    <ul>Strawberry</ul>
-    <ul>Rhubarb</ul>
-    <ul>Birthday</ul>
-    <ul>Cake</ul>
-    <ul>Lemon</ul>
-    <ul>Lavender</ul>
-    <ul>Cranberry Blackberry</ul>
-    <button id="buttonCopy" class="buttonBig">Copy</button>
-    <button id="buttonClear" class="buttonBig">Clear</button>
-  </div>
+    <div class="bun_row">
+        <div class="a_bun">Maple Apple</div>
+        <div class="a_bun">Pecan</div>
+        <div class="a_bun">Bacon Walnut Original (Gluten-free)</div>
+    </div>
+    <div class="bun_row">
+        <div class="a_bun">Original (Vegan)</div>
+        <div class="a_bun">Original Pumpkin</div>
+        <div class="a_bun">Spice</div>
+    </div>
+    <div class="bun_row">
+        <div class="a_bun">Caramel</div>
+        <div class="a_bun">Pecan</div>
+        <div class="a_bun">Carrot Cake Old Fashioned</div>
+    </div>
+    <div class="bun_row">
+        <div class="a_bun">Buttermilk</div>
+        <div class="a_bun">Strawberry</div>
+        <div class="a_bun">Rhubarb</div>
+    </div>
+    <div class="bun_row">
+        <div class="a_bun">Birthday</div>
+        <div class="a_bun">Cake</div>
+        <div class="a_bun">Lemon</div>
+    </div>
+    <div class="bun_row">
+        <div class="a_bun">Lavender</div>
+        <div class="a_bun">Cranberry Blackberry</div>
+    </div>
+</div>
 
-
+<footer> This cute little bun site baked by Scott Leinweber</footer>
 </body>
 </html>
