adds padding to buns

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@ to our site should be able to buy cinnamon rolls by different flavors:</p>
 <div id="bun_list" class="boxGreen">
     <br>
     <div class="bun_row">
-        <div class="a_bun">Maple Apple</div>
-        <div class="a_bun">Pecan</div>
-        <div class="a_bun">Bacon Walnut Original (Gluten-free)</div>
+        <div class="a_bun">Maple Apple<br><br></div>
+        <div class="a_bun">Pecan<br><br><br><br></div>
+        <div class="a_bun">Bacon Walnut Original (Gluten-free)<br><br><br><br></div>
     </div>
     <div class="bun_row">
         <div class="a_bun">Original (Vegan)</div>
@@ -27,9 +27,9 @@ to our site should be able to buy cinnamon rolls by different flavors:</p>
         <div class="a_bun">Spice</div>
     </div>
     <div class="bun_row">
-        <div class="a_bun">Caramel</div>
-        <div class="a_bun">Pecan</div>
-        <div class="a_bun">Carrot Cake Old Fashioned</div>
+        <div class="a_bun">Caramel<br></div>
+        <div class="a_bun">Pecan<br><br></div>
+        <div class="a_bun">Carrot Cake Old Fashioned<br></div>
     </div>
     <div class="bun_row">
         <div class="a_bun">Buttermilk</div>
@@ -47,6 +47,7 @@ to our site should be able to buy cinnamon rolls by different flavors:</p>
     </div>
 </div>
 
-<footer> This cute little bun site baked by Scott Leinweber</footer>
 </body>
+<footer> This cute little bun site baked by Scott Leinweber</footer>
+
 </html>
