added AI file, img folder, pngs, and imgs to html.

--- a/index.html
+++ b/index.html
@@ -7,43 +7,77 @@
 <link rel="stylesheet" type="text/css" href="./styles.css">
 <body>
 
-<h1> Welcome to the Double Bun Bake Shop</h1>
+<h1>Welcome to the Double Bun Bake Shop</h1>
 
 <p>We are a small bakery that specializes in cinnamon rolls,
-from our famous classic cinnamon roll to a variety of artisan flavors. Our shop is
-located in Pittsburgh, PA, but we ship fresh rolls to anywhere in the USA. Visitors
-to our site should be able to buy cinnamon rolls by different flavors:</p>
+from our famous classic cinnamon roll to a variety of artisan flavors. Our shop is located in Pittsburgh, PA, but we ship fresh rolls to anywhere in the USA. Visitors to our site should be able to buy cinnamon rolls by different flavors:</p>
 
 <div id="bun_list" class="boxGreen">
     <br>
     <div class="bun_row">
-        <div class="a_bun">Maple Apple<br><br></div>
-        <div class="a_bun">Pecan<br><br><br><br></div>
-        <div class="a_bun">Bacon Walnut Original (Gluten-free)<br><br><br><br></div>
+        <div class="a_bun">
+            <a href="product_page.html"> Maple Apple Pecan </a>
+            <img src="./imgs/maple_apple_pecan.png">
+        </div>
+        <div class="a_bun">Bacon
+            <img src="./imgs/bacon.png">
+        </div>
+        <div class="a_bun">Walnut
+            <img src="./imgs/walnut.png">
+        </div>
+
+
     </div>
     <div class="bun_row">
-        <div class="a_bun">Original (Vegan)</div>
-        <div class="a_bun">Original Pumpkin</div>
-        <div class="a_bun">Spice</div>
+        <div class="a_bun">Original (Vegan)
+            <img src="./imgs/original_vegan.png">
+        </div>
+        <div class="a_bun">Original Pumpkin Spice
+            <img src="./imgs/original.png">
+        </div>
+        <div class="a_bun">Original (Gluten-free)
+            <img src="./imgs/original_gf.png">
+        </div>
+
+
     </div>
     <div class="bun_row">
-        <div class="a_bun">Caramel<br></div>
-        <div class="a_bun">Pecan<br><br></div>
-        <div class="a_bun">Carrot Cake Old Fashioned<br></div>
+        <div class="a_bun">Caramel Pecan
+            <img src="./imgs/caramel_pecan.png">
+        </div>
+        <div class="a_bun">Pumpkin Spice
+            <img src="./imgs/pumpkin_spice.png">
+        </div>
+        <div class="a_bun">Carrot Cake
+            <img src="./imgs/carrot_cake.png">
+        </div>
+
+
     </div>
     <div class="bun_row">
-        <div class="a_bun">Buttermilk</div>
-        <div class="a_bun">Strawberry</div>
-        <div class="a_bun">Rhubarb</div>
+        <div class="a_bun">Old Fashioned Buttermilk
+            <img src="./imgs/old_fashion_buttermilk.png">
+        </div>
+        <div class="a_bun">Strawberry Rhubarb
+            <img src="./imgs/strawberry_rhubarb.png">
+        </div>
+        <div class="a_bun">Birthday Cake
+            <img src="./imgs/birthday_cake.png">
+        </div>
+
     </div>
     <div class="bun_row">
-        <div class="a_bun">Birthday</div>
-        <div class="a_bun">Cake</div>
-        <div class="a_bun">Lemon</div>
-    </div>
-    <div class="bun_row">
-        <div class="a_bun">Lavender</div>
-        <div class="a_bun">Cranberry Blackberry</div>
+        <div class="a_bun">Lemon Lavender
+            <img src="./imgs/lemon_lavender.png">
+        </div>
+        <div class="a_bun">Cranberry
+            <img src="./imgs/cranberry.png">
+        </div>
+        <div class="a_bun">Blackberry
+            <img src="./imgs/blackberry.png">
+        </div>
+
+
     </div>
 </div>
 
