adds main menu to index

--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
 
 <h1>Welcome to the Double Bun Bake Shop</h1>
 
-<div id='menu'>
+<div class='menu'>
     <ul>
-        <li>Home</li>
-        <li>Products</li>
-        <li>About Us</li>
-        <li>Locations</li>
+        <a href="./index.html">Home</a>
+        <a href="./products.html">Products</a>
+        <a href="./index.html">About Us</a>
+        <a href="./index.html">Locations</a>
     </ul>
 
 </div>
 
-<div id='our_story'>
+<div class='our_story'>
 <p>We are a small bakery that specializes in cinnamon rolls,
 from our famous classic cinnamon roll to a variety of artisan flavors. Our shop is located in Pittsburgh, PA, but we ship fresh rolls to anywhere in the USA. Visitors to our site should be able to buy cinnamon rolls by different flavors:</p>
 </div>
-<div id='big_bun_splash'>
+<div class='big_bun_splash'>
     <img src="./imgs/splash.gif">
 </div>
 </body>
