adds material color link

--- a/product_detail.html
+++ b/product_detail.html
@@ -9,6 +9,19 @@
 
 <h1>Welcome to the Double Bun Bake Shop</h1>
 
+
+<header>
+<div class='menu'>
+    <ul>
+        <a href="./index.html">Home</a>
+        <a href="./products.html">Products</a>
+        <a href="./index.html">About Us</a>
+        <a href="./index.html">Locations</a>
+    </ul>
+
+</div>
+</header>
+
 <p>We are a small bakery that specializes in cinnamon rolls,
 from our famous classic cinnamon roll to a variety of artisan flavors. Our shop is located in Pittsburgh, PA, but we ship fresh rolls to anywhere in the USA. Visitors to our site should be able to buy cinnamon rolls by different flavors:</p>
 
