--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <h1>Welcome to the Double Bun Bake Shop</h1>
 
+<header>
 <div class='menu'>
     <ul>
         <a href="./index.html">Home</a>
@@ -18,6 +19,7 @@
     </ul>
 
 </div>
+</header>
 
 <div class='our_story'>
 <p>We are a small bakery that specializes in cinnamon rolls,
