--- a/products.html
+++ b/products.html
@@ -9,6 +9,18 @@
 
 <h1>Welcome to the Double Bun Bake Shop</h1>
 
+<header>
+<div class='menu'>
+    <ul>
+        <a href="./index.html">Home</a>
+        <a href="./products.html">Products</a>
+        <a href="./index.html">About Us</a>
+        <a href="./index.html">Locations</a>
+    </ul>
+
+</div>
+</header>
+
 <p>We are a small bakery that specializes in cinnamon rolls,
 from our famous classic cinnamon roll to a variety of artisan flavors. Our shop is located in Pittsburgh, PA, but we ship fresh rolls to anywhere in the USA. Visitors to our site should be able to buy cinnamon rolls by different flavors:</p>
 
@@ -16,61 +28,75 @@ from our famous classic cinnamon roll to a variety of artisan flavors. Our shop 
     <br>
     <div class="bun_row">
         <div class="a_bun">
-            <a href="product_page.html"> Maple Apple Pecan </a>
+            <a href="product_detail.html"> Maple Apple Pecan </a>
             <img src="./imgs/maple_apple_pecan.png">
         </div>
-        <div class="a_bun">Bacon
+        <div class="a_bun">
+            <a href="product_detail.html"> Bacon </a>
             <img src="./imgs/bacon.png">
         </div>
-        <div class="a_bun">Walnut
+        <div class="a_bun">
+            <a href="product_detail.html"> Walnut </a>
             <img src="./imgs/walnut.png">
         </div>
     </div>
 
     <div class="bun_row">
-        <div class="a_bun">Original (Vegan)
+        <div class="a_bun">
+            <a href="product_detail.html"> Original (Vegan) </a>
             <img src="./imgs/original_vegan.png">
         </div>
-        <div class="a_bun">Original Pumpkin Spice
+        <div class="a_bun">
+            <a href="product_detail.html"> Original Pumpkin Spice</a>
             <img src="./imgs/original.png">
         </div>
-        <div class="a_bun">Original (Gluten-free)
+        <div class="a_bun">
+            <a href="product_detail.html"> Original (Gluten-free)</a>
             <img src="./imgs/original_gf.png">
         </div>
     </div>
 
     <div class="bun_row">
-        <div class="a_bun">Caramel Pecan
+        <div class="a_bun">
+            <a href="product_detail.html"> Caramel Pecan </a>
             <img src="./imgs/caramel_pecan.png">
         </div>
-        <div class="a_bun">Pumpkin Spice
+        <div class="a_bun">
+            <a href="product_detail.html"> Pumpkin Spice</a>
             <img src="./imgs/pumpkin_spice.png">
         </div>
-        <div class="a_bun">Carrot Cake
+        <div class="a_bun">
+            <a href="product_detail.html"> Carrot Cake</a>
             <img src="./imgs/carrot_cake.png">
         </div>
     </div>
 
     <div class="bun_row">
-        <div class="a_bun">Old Fashioned Buttermilk
+        <div class="a_bun">
+            <a href="product_detail.html"> Old Fashioned Buttermilk</a>
             <img src="./imgs/old_fashion_buttermilk.png">
         </div>
-        <div class="a_bun">Strawberry Rhubarb
+        <div class="a_bun">
+            <a href="product_detail.html"> Strawberry Rhubarb</a>
             <img src="./imgs/strawberry_rhubarb.png">
         </div>
-        <div class="a_bun">Birthday Cake
+        <div class="a_bun">
+            <a href="product_detail.html"> Birthday Cake</a>
             <img src="./imgs/birthday_cake.png">
         </div>
     </div>
 
     <div class="bun_row">
-        <div class="a_bun">Lemon Lavender
+        <div class="a_bun">
+            <a href="product_detail.html"> Lemon Lavender</a>
             <img src="./imgs/lemon_lavender.png">
         </div>
-        <div class="a_bun">Cranberry
+        <div class="a_bun">
+            <a href="product_detail.html"> Cranberry</a>
             <img src="./imgs/cranberry.png">
         </div>
-        <div class="a_bun">Blackberry
+        <div class="a_bun">
+            <a href="product_detail.html"> Blackberry</a>
             <img src="./imgs/blackberry.png">
         </div>
     </div>
