adds new logo, goes white color css, and working on product page

--- a/products.html
+++ b/products.html
@@ -5,20 +5,18 @@
 </head>
 
 <link rel="stylesheet" type="text/css" href="./styles.css">
+<link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet"> 
 <body>
 
-<h1>Welcome to the Double Bun Bake Shop</h1>
-
 <header>
-<div class='menu'>
-    <ul>
-        <a href="./index.html">Home</a>
-        <a href="./products.html">Products</a>
-        <a href="./index.html">About Us</a>
-        <a href="./index.html">Locations</a>
-    </ul>
+<img id="logo" src="./imgs/DB_logo.jpg" alt="Welcome to the Double Bun Bake Shop">
 
-</div>
+<nav class='menu'>
+    <a href="./index.html">Home</a>
+    <a href="./products.html">Products</a>
+    <a href="./index.html">About Us</a>
+    <a href="./location.html">Locations</a>
+</nav>
 </header>
 
 <p>We are a small bakery that specializes in cinnamon rolls,
