index pretty much there

--- a/index.html
+++ b/index.html
@@ -1,35 +1,35 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Home - Double Dun Bake Shop</title>
+    <title>DB Bake Shop</title>
 </head>
 
 <link rel="stylesheet" type="text/css" href="./styles.css">
+<link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet"> 
 <body>
 
-<h1>Welcome to the Double Bun Bake Shop</h1>
-
 <header>
-<div class='menu'>
-    <ul>
-        <a href="./index.html">Home</a>
-        <a href="./products.html">Products</a>
-        <a href="./index.html">About Us</a>
-        <a href="./index.html">Locations</a>
-    </ul>
-
-</div>
+<a href="./index.html"> <img id="logo" src="./imgs/DB_logo.jpg" alt="Welcome to the Double Bun Bake Shop"></a>
+<nav class='menu'>
+    <a href="./index.html">Home</a>
+    <a href="./products.html">Products</a>
+    <a href="./index.html">About Us</a>
+    <a href="./location.html">Locations</a>
+</nav>
 </header>
 
-<div class='our_story'>
-<p>We are a small bakery that specializes in cinnamon rolls,
-from our famous classic cinnamon roll to a variety of artisan flavors. Our shop is located in Pittsburgh, PA, but we ship fresh rolls to anywhere in the USA. Visitors to our site should be able to buy cinnamon rolls by different flavors:</p>
+<div id='bun_body'>
+	<div>
+		<img  id="shop_img" src="./imgs/DB_bakeshop.jpg">
+	</div>
+	<div class='our_story'>
+		<p>We are a small bakery that specializes in cinnamon rolls, from our famous classic cinnamon roll to a variety of artisan flavors. Our shop is located in Pittsburgh, PA, but we ship fresh rolls to anywhere in the USA. Visitors to our site should be able to buy cinnamon rolls by different flavors.</p>
+	<br>
+	</div>
 </div>
-<div class='big_bun_splash'>
-    <img src="./imgs/splash.gif">
-</div>
+
+	<footer> 
+		<p id="copyright">This cute little bun site baked by Scott Leinweber &#9400 2017</p>
+	</footer>
 </body>
-
-<footer> This cute little bun site baked by Scott Leinweber</footer>
-
 </html>
