--- a/product_detail.html
+++ b/product_detail.html
@@ -5,86 +5,31 @@
 </head>
 
 <link rel="stylesheet" type="text/css" href="./styles.css">
+<link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet"> 
 <body>
 
-<h1>Welcome to the Double Bun Bake Shop</h1>
-
-
 <header>
-<div class='menu'>
-    <ul>
-        <a href="./index.html">Home</a>
-        <a href="./products.html">Products</a>
-        <a href="./index.html">About Us</a>
-        <a href="./index.html">Locations</a>
-    </ul>
+<img id="logo" src="./imgs/DB_logo.jpg" alt="Welcome to the Double Bun Bake Shop">
 
-</div>
+<nav class='menu'>
+    <a href="./index.html">Home</a>
+    <a href="./products.html">Products</a>
+    <a href="./index.html">About Us</a>
+    <a href="./location.html">Locations</a>
+</nav>
 </header>
 
-<p>We are a small bakery that specializes in cinnamon rolls,
-from our famous classic cinnamon roll to a variety of artisan flavors. Our shop is located in Pittsburgh, PA, but we ship fresh rolls to anywhere in the USA. Visitors to our site should be able to buy cinnamon rolls by different flavors:</p>
+<div id="single_bun_desc">
+    <p>We are a small bakery that specializes in cinnamon rolls,
+    from our famous classic cinnamon roll to a variety of artisan flavors. Our shop is located in Pittsburgh, PA, but we ship fresh rolls to anywhere in the USA. Visitors to our site should be able to buy cinnamon rolls by different flavors:</p>
+</div>
 
-<div id="bun_list">
-    <br>
+<div id="single_bun_img">
+
     <div class="bun_row">
         <div class="a_bun">
             <a href="product_page.html"> Maple Apple Pecan </a>
             <img src="./imgs/maple_apple_pecan.png">
-        </div>
-        <div class="a_bun">Bacon
-            <img src="./imgs/bacon.png">
-        </div>
-        <div class="a_bun">Walnut
-            <img src="./imgs/walnut.png">
-        </div>
-    </div>
-
-    <div class="bun_row">
-        <div class="a_bun">Original (Vegan)
-            <img src="./imgs/original_vegan.png">
-        </div>
-        <div class="a_bun">Original Pumpkin Spice
-            <img src="./imgs/original.png">
-        </div>
-        <div class="a_bun">Original (Gluten-free)
-            <img src="./imgs/original_gf.png">
-        </div>
-    </div>
-
-    <div class="bun_row">
-        <div class="a_bun">Caramel Pecan
-            <img src="./imgs/caramel_pecan.png">
-        </div>
-        <div class="a_bun">Pumpkin Spice
-            <img src="./imgs/pumpkin_spice.png">
-        </div>
-        <div class="a_bun">Carrot Cake
-            <img src="./imgs/carrot_cake.png">
-        </div>
-    </div>
-
-    <div class="bun_row">
-        <div class="a_bun">Old Fashioned Buttermilk
-            <img src="./imgs/old_fashion_buttermilk.png">
-        </div>
-        <div class="a_bun">Strawberry Rhubarb
-            <img src="./imgs/strawberry_rhubarb.png">
-        </div>
-        <div class="a_bun">Birthday Cake
-            <img src="./imgs/birthday_cake.png">
-        </div>
-    </div>
-
-    <div class="bun_row">
-        <div class="a_bun">Lemon Lavender
-            <img src="./imgs/lemon_lavender.png">
-        </div>
-        <div class="a_bun">Cranberry
-            <img src="./imgs/cranberry.png">
-        </div>
-        <div class="a_bun">Blackberry
-            <img src="./imgs/blackberry.png">
         </div>
     </div>
 </div>
