--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 
 <link rel="stylesheet" type="text/css" href="./styles.css">
-<link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet"> 
+<link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
 <body>
 
 <header>
@@ -14,13 +14,13 @@
     <a href="./index.html">Home</a>
     <a href="./products.html">Products</a>
     <a href="./index.html">About Us</a>
-    <a href="./location.html">Locations</a>
+    <a href="./index.html">Locations</a>
 </nav>
 </header>
 
 <div id='bun_body'>
 	<div>
-		<img  id="shop_img" src="./imgs/DB_bakeshop.jpg">
+		<img id="shop_img" src="./imgs/DB_bakeshop.jpg">
 	</div>
 	<div class='our_story'>
 		<p>We are a small bakery that specializes in cinnamon rolls, from our famous classic cinnamon roll to a variety of artisan flavors. Our shop is located in Pittsburgh, PA, but we ship fresh rolls to anywhere in the USA. Visitors to our site should be able to buy cinnamon rolls by different flavors.</p>
@@ -28,8 +28,9 @@
 	</div>
 </div>
 
-	<footer> 
-		<p id="copyright">This cute little bun site baked by Scott Leinweber &#9400 2017</p>
-	</footer>
+    <footer> 
+        <p id="copyright">This cute little bun site baked by Scott Leinweber &#9400 2017</p>
+        <img src="./imgs/DB_social.png">
+    </footer>
 </body>
 </html>
