--- a/product_detail.html
+++ b/product_detail.html
@@ -1,40 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Home - Double Dun Bake Shop</title>
+    <title>DB Bake Shop</title>
 </head>
 
 <link rel="stylesheet" type="text/css" href="./styles.css">
-<link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet"> 
+<link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
 <body>
 
 <header>
-<img id="logo" src="./imgs/DB_logo.jpg" alt="Welcome to the Double Bun Bake Shop">
-
+<a href="./index.html"> <img id="logo" src="./imgs/DB_logo.jpg" alt="Welcome to the Double Bun Bake Shop"></a>
 <nav class='menu'>
     <a href="./index.html">Home</a>
     <a href="./products.html">Products</a>
     <a href="./index.html">About Us</a>
-    <a href="./location.html">Locations</a>
+    <a href="./index.html">Locations</a>
 </nav>
 </header>
 
-<div id="single_bun_desc">
-    <p>We are a small bakery that specializes in cinnamon rolls,
-    from our famous classic cinnamon roll to a variety of artisan flavors. Our shop is located in Pittsburgh, PA, but we ship fresh rolls to anywhere in the USA. Visitors to our site should be able to buy cinnamon rolls by different flavors:</p>
-</div>
-
-<div id="single_bun_img">
-
-    <div class="bun_row">
-        <div class="a_bun">
-            <a href="product_page.html"> Maple Apple Pecan </a>
+<div id="bun_body"></div>
+    <div id="single_bun_img">
             <img src="./imgs/maple_apple_pecan.png">
-        </div>
+    </div>
+    <div id="single_bun_desc">
+        <h3 id="bun_name"> Maple Apple Pecan </h3>
+        <img src="./imgs/acorn.jpg">
+        <p>#8972 / IN STOCK</p>
+        <p>We are a small bakery that specializes in cinnamon rolls,
+        from our famous classic cinnamon roll to a variety of artisan flavors. Our shop is located in Pittsburgh, PA, but we ship fresh rolls to anywhere in the USA. Visitors to our site should be able to buy cinnamon rolls by different flavors:</p>
     </div>
 </div>
+    <footer> 
+        <p id="copyright">This cute little bun site baked by Scott Leinweber &#9400 2017</p>
+        <img src="./imgs/DB_social.png">
+    </footer>
 </body>
-
-<footer> This cute little bun site baked by Scott Leinweber</footer>
-
 </html>
