--- a/products.html
+++ b/products.html
@@ -1,103 +1,105 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Home - Double Dun Bake Shop</title>
+    <title>DB Bake Shop</title>
 </head>
 
 <link rel="stylesheet" type="text/css" href="./styles.css">
-<link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet"> 
+<link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
 <body>
 
 <header>
-<img id="logo" src="./imgs/DB_logo.jpg" alt="Welcome to the Double Bun Bake Shop">
-
+<a href="./index.html"><img id="logo" src="./imgs/DB_logo.jpg" alt="Welcome to the Double Bun Bake Shop"></a>
 <nav class='menu'>
     <a href="./index.html">Home</a>
     <a href="./products.html">Products</a>
     <a href="./index.html">About Us</a>
-    <a href="./location.html">Locations</a>
+    <a href="./index.html">Locations</a>
 </nav>
 </header>
 
-<div id="bun_list">
-    <br>
-    <div class="bun_row">
-        <div class="a_bun">
-            <a href="product_detail.html"> Maple Apple Pecan </a>
-            <img src="./imgs/maple_apple_pecan.png">
+<div id="bun_body">
+    <div id="bun_list">
+        <br>
+        <div class="bun_row">
+            <div class="a_bun">
+                <a href="product_detail.html"><img src="./imgs/maple_apple_pecan.png"></a>
+                <a href="product_detail.html">Maple Apple Pecan </a>
+            </div>
+            <div class="a_bun">
+                <a href="product_detail.html"><img src="./imgs/bacon.png"></a>
+                <a href="product_detail.html">Bacon </a>
+            </div>
+            <div class="a_bun">
+                <a href="product_detail.html"><img src="./imgs/walnut.png"></a>
+                <a href="product_detail.html">Walnut </a>
+            </div>
         </div>
-        <div class="a_bun">
-            <a href="product_detail.html"> Bacon </a>
-            <img src="./imgs/bacon.png">
-        </div>
-        <div class="a_bun">
-            <a href="product_detail.html"> Walnut </a>
-            <img src="./imgs/walnut.png">
-        </div>
-    </div>
 
-    <div class="bun_row">
-        <div class="a_bun">
-            <a href="product_detail.html"> Original (Vegan) </a>
-            <img src="./imgs/original_vegan.png">
+        <div class="bun_row">
+            <div class="a_bun">
+                <a href="product_detail.html"><img src="./imgs/original_vegan.png"></a>
+                <a href="product_detail.html">Original (Vegan) </a>
+            </div>
+            <div class="a_bun">
+                <a href="product_detail.html"><img src="./imgs/original.png"></a>
+                <a href="product_detail.html">Original</a>
+            </div>
+            <div class="a_bun">
+                <a href="product_detail.html"><img src="./imgs/original_gf.png"></a>
+                <a href="product_detail.html">Original (Gluten-free)</a>
+            </div>
         </div>
-        <div class="a_bun">
-            <a href="product_detail.html"> Original Pumpkin Spice</a>
-            <img src="./imgs/original.png">
-        </div>
-        <div class="a_bun">
-            <a href="product_detail.html"> Original (Gluten-free)</a>
-            <img src="./imgs/original_gf.png">
-        </div>
-    </div>
 
-    <div class="bun_row">
-        <div class="a_bun">
-            <a href="product_detail.html"> Caramel Pecan </a>
-            <img src="./imgs/caramel_pecan.png">
+        <div class="bun_row">
+            <div class="a_bun">
+                <a href="product_detail.html"><img src="./imgs/caramel_pecan.png"></a>
+                <a href="product_detail.html">Caramel Pecan </a>
+            </div>
+            <div class="a_bun">
+                <a href="product_detail.html"><img src="./imgs/pumpkin_spice.png"></a>
+                <a href="product_detail.html">Pumpkin Spice</a>
+            </div>
+            <div class="a_bun">
+                <a href="product_detail.html"><img src="./imgs/carrot_cake.png"></a>
+                <a href="product_detail.html">Carrot Cake</a>
+            </div>
         </div>
-        <div class="a_bun">
-            <a href="product_detail.html"> Pumpkin Spice</a>
-            <img src="./imgs/pumpkin_spice.png">
-        </div>
-        <div class="a_bun">
-            <a href="product_detail.html"> Carrot Cake</a>
-            <img src="./imgs/carrot_cake.png">
-        </div>
-    </div>
 
-    <div class="bun_row">
-        <div class="a_bun">
-            <a href="product_detail.html"> Old Fashioned Buttermilk</a>
-            <img src="./imgs/old_fashion_buttermilk.png">
+        <div class="bun_row">
+            <div class="a_bun">
+                <a href="product_detail.html"><img src="./imgs/old_fashion_buttermilk.png"></a>
+                <a href="product_detail.html">Old Fashioned Buttermilk</a>
+            </div>
+            <div class="a_bun">
+                <a href="product_detail.html"><img src="./imgs/strawberry_rhubarb.png"></a>
+                <a href="product_detail.html">Strawberry Rhubarb</a>
+            </div>
+            <div class="a_bun">
+                <a href="product_detail.html"><img src="./imgs/birthday_cake.png"></a>
+                <a href="product_detail.html">Birthday Cake</a>
+            </div>
         </div>
-        <div class="a_bun">
-            <a href="product_detail.html"> Strawberry Rhubarb</a>
-            <img src="./imgs/strawberry_rhubarb.png">
-        </div>
-        <div class="a_bun">
-            <a href="product_detail.html"> Birthday Cake</a>
-            <img src="./imgs/birthday_cake.png">
-        </div>
-    </div>
 
-    <div class="bun_row">
-        <div class="a_bun">
-            <a href="product_detail.html"> Lemon Lavender</a>
-            <img src="./imgs/lemon_lavender.png">
-        </div>
-        <div class="a_bun">
-            <a href="product_detail.html"> Cranberry</a>
-            <img src="./imgs/cranberry.png">
-        </div>
-        <div class="a_bun">
-            <a href="product_detail.html"> Blackberry</a>
-            <img src="./imgs/blackberry.png">
+        <div class="bun_row">
+            <div class="a_bun">
+                <a href="product_detail.html"><img src="./imgs/lemon_lavender.png"></a>
+                <a href="product_detail.html">Lemon Lavender</a>
+            </div>
+            <div class="a_bun">
+                <a href="product_detail.html"><img src="./imgs/cranberry.png"></a>
+                <a href="product_detail.html">Cranberry</a>
+            </div>
+            <div class="a_bun">
+                <a href="product_detail.html"><img src="./imgs/blackberry.png"></a>
+                <a href="product_detail.html">Blackberry</a>
+            </div>
         </div>
     </div>
 </div>
+    <footer> 
+        <p id="copyright">This cute little bun site baked by Scott Leinweber &#9400 2017</p>
+        <img src="./imgs/DB_social.png">
+    </footer>
 </body>
-
-<footer> This cute little bun site baked by Scott Leinweber</footer>
-
 </html>
